kuber/deployment-face-verification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivashko-face-verification-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-verification
  template:
    metadata:
      labels:
        app: face-verification
    spec:
      containers:
      - name: face-verification
        image: merewhale/face_verification:1.0.0
        ports:
        - containerPort: 8003
