kuber/service-face-verification.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-verification
  namespace: test
spec:
  selector:
    app: face-verification
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
