kuber/ingress-face-verification.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-verification-ingress
  namespace: test
spec:
  rules:
  - host: face-verification.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: face-verification
            port:
              number: 8003
